Stop splash show arrows dissappearing off screen on larger displays

--- a/contents/css/resume.screen.css
+++ b/contents/css/resume.screen.css
@@ -274,7 +274,7 @@
 
   .splash__show {
     display: none;
-    bottom: calc(50vh - (2.5 * var(--base-leading)));
+    top: 105vh;
   }
 }
 
